--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@heroicons/react": "^2.2.0",
     "lucide-react": "^0.511.0"
+  },
+  "devDependencies": {
+    "vite": "^6.3.5"
   }
 }
